[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "self_reporting_bot"
description = "Delta Chat bot to collect statistics from users"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["deltachat", "bot", "deltabot-cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dynamic = ["version"]
dependencies = [
    "deltabot-cli>=3.0.0,<4.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
self_reporting_bot = "self_reporting_bot:main"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
